# blocks

./: __init__.py  pyproject.toml
core/: __init__.py  agent.py  agent_collaboration.py  communication.py  context_manager.py  node.py  tool.py  workflow.py
engine/: __init__.py  dynamic_flow.py  expression_evaluator.py  transition_points.py  workflow_engine.py
error_handling/: __init__.py  error_handler.py
monitoring/: __init__.py  metrics.py
nodes/: __init__.py  agent_node.py  decision_node.py  flow_executor_node.py  notification_node.py  subflow_node.py  task_node.py  wait_node.py
parsers/: __init__.py  validator.py  yaml_parser.py
src/core/: context.py  executor.py  node.py  workflow.py
src/nodes/: decision_node.py
tests/core/: test_execution_context.py  test_node.py  test_workflow.py  test_workflow_builder.py  test_workflow_executor.py
tests/nodes/: test_decision_node.py
utils/: __init__.py  logging_utils.py
